# blhackbox

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  blhackbox-mcp-catalog.yaml  blhackbox-mcp.json  docker-compose.yml  hexstrike.Dockerfile  pyproject.toml  requirements.txt  setup.py  setup.sh  verification.env
.claude/: hexstrike-mcp-start.sh  mcp-health-check.sh  mcp-start.sh  msf-mcp-start.sh  opsec-audit.sh  settings.json
.claude/hooks/: loop-detector.sh  session-start.sh
.claude/skills/api-security/: SKILL.md
.claude/skills/bug-bounty/: SKILL.md
.claude/skills/exploit-dev/: SKILL.md
.claude/skills/full-attack-chain/: SKILL.md
.claude/skills/full-pentest/: SKILL.md
.claude/skills/network-infrastructure/: SKILL.md
.claude/skills/opsec-check/: SKILL.md
.claude/skills/osint-gathering/: SKILL.md
.claude/skills/quick-scan/: SKILL.md
.claude/skills/recon-deep/: SKILL.md
.claude/skills/vuln-assessment/: SKILL.md
.claude/skills/web-app-assessment/: SKILL.md
.github/: build-matrix.json
.github/workflows/: _build-images.yml  build-and-push.yml  ci.yml  docker-publish.yml
blhackbox/: __init__.py  config.py  exceptions.py  main.py
blhackbox/agents/: __init__.py  base_agent.py  base_agent_server.py  error_log_agent.py  ingestion_agent.py  ingestion_server.py  network_agent.py  processing_agent.py  processing_server.py  recon_agent.py  structure_agent.py  synthesis_agent.py  synthesis_server.py  vuln_agent.py  web_agent.py
blhackbox/backends/: CLAUDE.md  __init__.py  base.py  hexstrike.py  local.py
blhackbox/clients/: __init__.py  hexstrike_client.py
blhackbox/core/: __init__.py  exploit_generator.py  graph_exporter.py  knowledge_graph.py  orchestrator.py  planner.py  runner.py
blhackbox/data/: tools_catalog.json
blhackbox/llm/: __init__.py  client.py  exploit_prompts.py  prompts.py
blhackbox/mcp/: CLAUDE.md  __init__.py  server.py
blhackbox/models/: CLAUDE.md  __init__.py  aggregated_payload.py  base.py  graph.py  hexstrike.py
blhackbox/modules/: __init__.py  base.py
blhackbox/modules/argus_bridge/: __init__.py  port_scan.py  subdomain_enum.py  tech_detect.py
blhackbox/prompts/: __init__.py  claude_pentest_playbook.md  claude_playbook.md  inject_verification.py  verification.md
blhackbox/prompts/agents/: error_log_agent.md  ingestionagent.md  network_agent.md  processingagent.md  recon_agent.md  structure_agent.md  synthesisagent.md  vuln_agent.md  web_agent.md
blhackbox/prompts/templates/: README.md  __init__.py  api-security.md  bug-bounty.md  exploit-dev.md  full-attack-chain.md  full-pentest.md  network-infrastructure.md  osint-gathering.md  quick-scan.md  recon-deep.md  vuln-assessment.md  web-app-assessment.md
blhackbox/reporting/: CLAUDE.md  __init__.py  html_generator.py  md_generator.py  paths.py  pdf_generator.py
blhackbox/utils/: catalog.py  logger.py
boaz-mcp/: README.md  server.py
docker/: agent-ingestion.Dockerfile  agent-processing.Dockerfile  agent-synthesis.Dockerfile  aggregator.Dockerfile  blhackbox.Dockerfile  boaz-mcp.Dockerfile  claude-code-entrypoint.sh  claude-code.Dockerfile  deepseek-entrypoint.sh  deepseek.Dockerfile  hexstrike-ai.Dockerfile  hexstrike-mcp.Dockerfile  hexstrike.Dockerfile  kali-mcp.Dockerfile  metasploit-mcp.Dockerfile  ollama-entrypoint.sh  ollama-mcp.Dockerfile  ollama.Dockerfile  screenshot-mcp.Dockerfile  wire-mcp.Dockerfile
docs/: container-integration-review.md  external-repo-assessment.md  mcp-server-review.md  pentagi-comparison.md  repo-audit.md  vector-memory-design.md
docs/architecture/: hexstrike-vs-blhackbox.md
docs/external-integrations/: boaz-mcp-architecture.md  hexstrike-ai-review.md
har-analysis/: linkedin_pulse_all_urls.json  linkedin_pulse_all_urls.md  linkedin_pulse_content_urls.json  linkedin_pulse_content_urls.md  linkedin_pulse_identifiers.json  linkedin_pulse_identifiers.md  linkedin_pulse_intel_report.json  linkedin_pulse_intel_report.md
hexstrike-mcp/: README.md  requirements.txt  server.py
kali-mcp/: Dockerfile  entrypoint.sh  requirements.txt  server.py
mcp_servers/: blhackbox_aggregator_mcp.py  ollama_mcp_server.py
metasploit-mcp/: entrypoint.sh  requirements.txt  server.py
reports/: MCP-SERVER-ISSUES-2026-03-06.md  MCP-SERVER-TESTING-2026-03-06.md  PLATFORM-ISSUES-2026-03-04.md  mcp_server_testing_report_2026-03-06.md
screenshot-mcp/: requirements.txt  server.py
scripts/: add_model.sh  check_mcp_servers.py  reset_graph.py  security_scan.py  select_build_matrix.py  tool_inventory.py
tests/: conftest.py  test_agent_server.py  test_agents.py  test_aggregated_payload.py  test_aggregator_mcp.py  test_backends.py  test_boaz_mcp.py  test_catalog.py  test_catalog_metadata.py  test_cli.py  test_compose_integrations.py  test_config.py  test_docker_publish_matrix.py  test_exploit.py  test_graph_exporter.py  test_hexstrike_client.py  test_hexstrike_mcp.py  test_kali_mcp.py  test_mcp_server.py  test_mcp_validation_scripts.py  test_models.py  test_modules.py  test_ollama_mcp.py  test_planner.py  test_prompts.py  test_reporting.py  test_runner.py  test_screenshot_mcp.py  test_skill_readiness.py  test_tool_inventory.py
wire-mcp/: requirements.txt  server.py
