[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blhackbox"
version = "1.0.0"
description = "Intelligent orchestration and correlation layer for HexStrike AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Blhackbox Contributors"},
]
keywords = ["security", "pentesting", "automation", "hexstrike", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Core
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "rich>=13.7",
    # Neo4j (Phase 2)
    "neo4j>=5.15",
    # LangGraph / LLM (Phase 3)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    # Reporting (Phase 4)
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    # Utilities
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "respx>=0.21",
]

[project.scripts]
blhackbox = "blhackbox.main:cli"

[tool.setuptools.packages.find]
include = ["blhackbox*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
