[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blhackbox"
version = "1.0.0"
description = "Intelligent orchestration and correlation layer for HexStrike AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Blhackbox Contributors"},
]
keywords = ["security", "pentesting", "automation", "hexstrike", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    # Core - pinned for reproducibility and supply-chain safety
    "click==8.1.8",
    "httpx==0.28.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.10.1",
    "rich==13.9.4",
    # Neo4j (Phase 2)
    "neo4j==5.27.0",
    # LangGraph / LLM (Phase 3)
    "langgraph==1.0.8",
    "langchain-core==1.2.11",
    "langchain-openai==1.1.9",
    "langchain-anthropic==1.3.3",
    "langchain-community==0.4.1",
    "langchain-ollama==1.0.1",
    # Reporting (Phase 4)
    "weasyprint==68.1",
    "jinja2==3.1.6",
    "matplotlib==3.10.0",
    # Utilities
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "ruff==0.9.6",
    "mypy==1.14.1",
    "respx==0.22.0",
]

[project.scripts]
blhackbox = "blhackbox.main:cli"

[tool.setuptools.packages.find]
include = ["blhackbox*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
